make a contact form

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.25.0",
     "react-slick": "^0.30.2",
     "react-transition-group": "^4.4.5",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.12.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
